RESOLVED FIXED153111
Media Query (-webkit-video-playable-inline) is failing as an invalid media query expression
https://bugs.webkit.org/show_bug.cgi?id=153111
Summary Media Query (-webkit-video-playable-inline) is failing as an invalid media qu...
Joseph Pecoraro
Reported 2016-01-14 15:59:46 PST
* SUMMARY Media Query (-webkit-video-playable-inline) is failing as an invalid media query expression LayoutTests/platform/iphone-simulator/iphone/fast/media/video-inline.html * STEPS TO REPRODUCE 1. window.styleMedia.matchMedium("(-webkit-video-playable-inline)") => Should be true, but got false. * NOTES - The LayoutTest does not need to be iOS specific - Seems to have been failing for a very long time based on the last time test results were updated. - Should we just remove the media query? I do not see it documented anywhere
Attachments
[PATCH] Possible Fix (805 bytes, patch)
2016-01-14 16:00 PST, Joseph Pecoraro
no flags
[PATCH] Proposed Fix (7.88 KB, patch)
2016-01-14 16:35 PST, Joseph Pecoraro
no flags
Joseph Pecoraro
Comment 1 2016-01-14 16:00:39 PST
Created attachment 269015 [details] [PATCH] Possible Fix The fix is rather easy. But lets discuss first if we should just remove the media query.
Joseph Pecoraro
Comment 2 2016-01-14 16:35:46 PST
Created attachment 269018 [details] [PATCH] Proposed Fix
WebKit Commit Bot
Comment 3 2016-01-15 14:28:17 PST
Comment on attachment 269018 [details] [PATCH] Proposed Fix Clearing flags on attachment: 269018 Committed r195148: <http://trac.webkit.org/changeset/195148>
WebKit Commit Bot
Comment 4 2016-01-15 14:28:26 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.